--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "dependencies": {
     "live-server": "^1.2.2",
     "systemjs": "^0.21.6"
+  },
+  "devDependencies": {
+    "@types/node": "^18.11.18"
   }
 }
